add user with csv and form with affich class and role